--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2320,12 +2320,17 @@ li.active .li2 bl {
 #divlogin svg {
 	width: 45px;
 }
+#divlogin i {
+	font-size: 20px;
+	vertical-align: -3px;
+}
 #pwd {
-	text-align: center;
+	height: 40px;
 	margin: 10px;
 	padding: 10px;
 	font-family: "Lato";
 	font-size: 15px;
+	text-align: center;
 	color: var( --cw );
 	background-color: #000000 !important;
 	border-radius: 4px;
