--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -138,8 +138,11 @@
 	width: 50px;
 	animation: blinkopaque 1.5s linear infinite;
 }
-svg rect {
+#loader rect {
 	fill: var( --cm );
+}
+#loader path {
+	fill: var( --cw );
 }
 
 *,
