--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -39,6 +39,7 @@
 .fa-bookmark:before { content: "\f550" }
 .fa-bluetooth:before { content: "\f58C" }
 .fa-bluetooth-client:before { content: "\f58D" }
+.fa-brush:before { content: "\f536" }
 .fa-check:before { content: "\f51B" }
 .fa-code:before { content: "\f50C" }
 .fa-composer:before { content: "\f558" }
