--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -61,7 +61,7 @@
 .fa-folder-open:before { content: "\f541" }
 .fa-folder-refresh:before { content: "\f534" }
 .fa-gear:before { content: "\f509" }
-.fa-gears:before { content: "\f50A" }
+.fa-gear-dot:before { content: "\f50A" }
 .fa-genre:before { content: "\f55A" }
 .fa-guide:before { content: "\f579" }
 .fa-info-circle:before { content: "\f561" }
@@ -532,15 +532,20 @@ i.map.disabled, .map.disabled i {
 #button-settings {
 	position: absolute;
 	right: 20px;
+	height: 40px;
 	font-size: 30px;
+}
+#button-addons {
+	position: absolute;
+	color: var( --cm ) !important;
+	text-shadow: none !important;
 }
 #badge {
 	position: absolute;
-	width: 15px;
-	height: 15px;
-	top: 20px;
-	right: 24px;
-	text-align: center;
+	width: 13px;
+	height: 13px;
+	top: 14px;
+	right: 33px;
 	border-radius: 50%;
 	background: var( --cm );
 }
@@ -2620,6 +2625,9 @@ li.active .li2 bl {
 @media( orientation: portrait ) and ( max-width: 400px ) {
 	#button-settings {
 		right: 10px;
+	}
+	#badge {
+		right: 23px;
 	}
 	.content-top {
 		padding-right: 0;
