--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -487,7 +487,7 @@ i.map.disabled, .map.disabled i {
 	position: fixed;
 	width: 100%;
 	height: 40px;
-	background: linear-gradient( to left, var( --cg ) calc( 100% - 40px ), rgba( 0,0,0,0 ) 100% );
+	background: linear-gradient( to left, var( --cg ) calc( 100% - 50px ), var( --cgd ) 100% );
 	z-index: 105;
 }
 #bar-bottom {
