--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2273,6 +2273,8 @@ li.active .li2 bl {
 	-webkit-transform: translateY( -50% );
 	-ms-transform: translateY( -50% );
 	transform: translateY( -50% );
+	width: 230px;
+	margin: auto;
 }
 #canvascolor {
 	background: #000000;
