--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1,3 +1,6 @@
+ /* default color: keep single line for cmd.sh color */
+#colorreset { background-color: hsl(200,100%,35%) !important;
+
 @font-face {
 	font-family: Lato;
 	src: url( '/assets/fonts/lato-regular-webfont.woff' ) format( 'woff' ),
@@ -2296,9 +2299,6 @@ li.active .li2 bl {
 		160% 100% at 50% 0%,
 		hsla(0,0%,100%,.3) 50%,
 		hsla(0,0%,100%,0) 55% );
-}
-#colorreset {
-	background-color: hsl(200,100%,35%);
 }
 #colorcancel {
 	position: absolute;
