--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -2660,7 +2660,10 @@ li.active .li2 bl {
 @media( max-width: 480px ) and ( max-height: 320px ) {
 	#page-playback {
 		--scale: 0.65;
-		padding: 50px 0 0 !important;
+		padding: 40px 0 0 !important;
+	}
+	#info {
+		transform: scale( 1.25 );
 	}
 	#bar-bottom {
 		height: 30px;
@@ -2671,7 +2674,7 @@ li.active .li2 bl {
 	#coverart-block,
 	#divcover { max-width: 100vh; }
 	#coverart-block { margin-bottom : 0; }
-	#playback-row { margin-top: 35px; }
+	#playback-row { margin-top: 40px; }
 }
 @media( max-height: 480px ) and ( max-width: 320px ) {
 	#page-playback {
