--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -36,6 +36,7 @@
 .fa-album:before { content: "\f555" }
 .fa-albumartist:before { content: "\f557" }
 .fa-arrow-left:before { content: "\f602" }
+.fa-arrow-right:before { content: "\f603" }
 .fa-artist:before { content: "\f556" }
 .fa-bars:before { content: "\f51C" }
 .fa-bio:before { content: "\f515" }
