--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -534,6 +534,9 @@ input:checked + .switchlabel.disabled:after {
 .cga {
 	background: var( --cga ) !important;
 }
+#divwebui, #boxqr {
+	height: 180px;
+}
 #boxqr .col-l {
 	padding-top: 0;
 	text-align: left;
