--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -1,3 +1,72 @@
+#infoRange input {
+	height: 47px;
+	-webkit-appearance: none;
+	margin: 10px 0;
+	width: 230px;
+	background: var( --cga );
+	cursor: pointer;
+}
+#infoRange input::-webkit-slider-thumb {
+	box-shadow: 0px 2px 5px #000000;
+	height: 40px;
+	width: 40px;
+	border-radius: 4px;
+	background: -webkit-radial-gradient( 100% -50%, 300% 190%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background-color: var( --cm );
+}
+#infoRange input::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	margin-top: -20px;
+}
+#infoRange input::-moz-range-thumb {
+	box-shadow: 0px 2px 5px #000000;
+	height: 40px;
+	width: 40px;
+	border-radius: 4px;
+	background: -webkit-radial-gradient( 100% -50%, 300% 190%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background: radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
+	background-color: var( --cm );
+}
+#infoRange input::-webkit-slider-runnable-track {
+	width: 100%;
+	height: 3px;
+	transition : all 2s;
+	border-radius: 0px;
+	background: #000000;
+}
+#infoRange input:focus::-webkit-slider-runnable-track {
+	background: #000000;
+}
+#infoRange input::-moz-range-track {
+	width: 100%;
+	height: 3px;
+	transition : all 2s;
+	background: #000000;
+	border-radius: 0px;
+}
+#infoRange .value {
+	margin: auto;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	line-height: 40px;
+	text-align: center;
+	background: #000000;
+}
+#infoRange .min,
+#infoRange .max {
+	position: relative;
+	display: inline-block;
+	width: 40px;
+	top: -18px;
+	padding: 0 10px;
+	text-align: right;
+	color: var( --cg60 );
+}
+#infoRange .max {
+	text-align: left;
+}
 *,
 *:before,
 *:after{
