--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -2,7 +2,7 @@
 	height: 47px;
 	-webkit-appearance: none;
 	margin: 10px 0;
-	width: 230px;
+	width: 280px;
 	background: var( --cga );
 	cursor: pointer;
 }
@@ -10,12 +10,11 @@
 	box-shadow: 0px 2px 5px #000000;
 	height: 40px;
 	width: 40px;
+	border: none;
 	border-radius: 4px;
 	background: -webkit-radial-gradient( 100% -50%, 300% 190%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
 	background: radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
 	background-color: var( --cm );
-}
-#infoRange input::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	margin-top: -20px;
 }
@@ -23,6 +22,7 @@
 	box-shadow: 0px 2px 5px #000000;
 	height: 40px;
 	width: 40px;
+	border: none;
 	border-radius: 4px;
 	background: -webkit-radial-gradient( 100% -50%, 300% 190%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
 	background: radial-gradient( 225% 90% at 100% 0%, hsla(0,0%,100%,.3) 50%, hsla(0,0%,100%,0) 55% );
