--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -246,6 +246,7 @@ heading {
 	font-size: 24px;
 	font-weight: 300;
 	border-bottom: 1px solid var( --cg );
+	user-select: none;
 }
 heading.sub {
 	margin: 5px 0 5px 0;
@@ -566,6 +567,7 @@ input:checked + .switchlabel.disabled:after {
 	text-align: right;
 	padding-right: 15px;
 	padding-top: 10px;
+	user-select: none;
 }
 .col-l.text {
 	padding-top: 0;
