--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -410,6 +410,7 @@ hr {
 	border-radius: 0px;
 }
 #infoRange .value {
+	margin-top: -15px;
 	font-size: 18px;
 	font-weight: 300;
 	text-align: center;
