--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -48,6 +48,7 @@
 .fa-code:before { content: "\f50C" }
 .fa-composer:before { content: "\f558" }
 .fa-coverart:before { content: "\f559" }
+.fa-coverart-refresh:before { content: "\f53D" }
 .fa-crop:before { content: "\f568" }
 .fa-date:before { content: "\f54B" }
 .fa-dice:before { content: "\f569" }
