--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1745,17 +1745,18 @@ i.map.disabled, .map.disabled i {
 #albumrefresh {
 	margin-left: 15px;
 }
-#albumrefresh i {
+#albumrefresh .fa-refresh {
 	position: absolute;
-	font-size: 26px !important;
+	font-size: 26px;
+}
+#albumrefresh .fa-coverart {
+	font-size: 30px;
+	color: var( --cm );
 }
 #albumrefresh img {
 	width: 30px;
 	margin-left: 5px;
 	vertical-align: -6px;
-}
-#albumrefresh .svg {
-	filter: invert( 1 );
 }
 #mode-title,
 .pl-title {
