--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -136,12 +136,17 @@ hr {
 	color: var( --cw );
 }
 #infoTop .albumrefresh {
-	line-height: 32px;
 	color: var( --cw );
+	z-index: 1;
 }
 #infoTop .imgicon {
 	float: left;
 	margin-top: 4px;
+	width: 35px;
+}
+#infoTop .imgicon i {
+	position: absolute;
+	line-height: 32px;
 }
 #infoTop .imgicon img {
 	width: 30px;
