--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1750,8 +1750,8 @@ i.map.disabled, .map.disabled i {
 	font-size: 26px !important;
 }
 .albumcoverart {
-	font-size: 30px;
-	color: var( --cm );
+	font-size: 30px !important;
+	color: var( --cm )  !important;
 }
 .albumimg {
 	width: 30px;
