--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -681,6 +681,10 @@ input:checked + .switchlabel.disabled:after {
 	}
 }
 @media ( max-width: 580px ) {
+	#bar-bottom div {
+		width: calc( 100vw / 5 );
+		max-width: 100%;
+	}
 	#bar-bottom a {
 		display: none;
 	}
