--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -334,8 +334,8 @@ heading i.fa-question-circle {
 }
 #bar-bottom div {
 	display: inline-block;
-	width: calc( 100vw / 5 );
-	max-width: 130px;
+	width: calc( 100% / 5 );
+	max-width: 132px;
 	height: 40px;
 	cursor: pointer;
 }
@@ -682,8 +682,7 @@ input:checked + .switchlabel.disabled:after {
 }
 @media ( max-width: 580px ) {
 	#bar-bottom div {
-		width: calc( 100vw / 5 );
-		max-width: 100%;
+		width: calc( 100% / 5 );
 	}
 	#bar-bottom a {
 		display: none;
