--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -325,6 +325,7 @@ heading i.fa-question-circle {
 	bottom: 0;
 	width: 100%;
 	height: 40px;
+	padding: 0 55px;
 	font-size: 28px;
 	line-height: 30px;
 	text-align: center;
