--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1748,6 +1748,12 @@ i.map.disabled, .map.disabled i {
 .albumrefresh {
 	position: absolute;
 	font-size: 26px !important;
+/*	text-shadow:
+		-1px -1px 10px var( --cg ),
+		 1px -1px 10px var( --cg ),
+		-1px  1px 10px var( --cg ),
+		 1px  1px 10px var( --cg )
+		!important;*/
 }
 .albumcoverart {
 	font-size: 30px !important;
