--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -89,6 +89,7 @@
 .fa-source:before { content: "\f52A" }
 .fa-sources:before { content: "\f538" }
 .fa-spotify:before { content: "\f593" }
+.fa-status:before { content: "\f50A" }
 .fa-stopwatch:before { content: "\f547" }
 .fa-system:before { content: "\f581" }
 .fa-times:before { content: "\f51A" }
@@ -263,6 +264,7 @@ heading.noline {
 heading i {
 	width: 50px;
 	text-align: center;
+	color: var( --cg60 );
 }
 heading i.back {
 	width: 40px;
@@ -553,7 +555,7 @@ input:checked + .switchlabel.disabled:after {
 .container {
 	max-width: 768px;
 	min-height: 100vh;
-	padding: 40px 55px 100px 55px;
+	padding: 30px 55px 100px 55px;
 }
 .col-l,
 .col-r {
@@ -579,8 +581,8 @@ input:checked + .switchlabel.disabled:after {
 	line-height: 18px;
 }
 .settings i,
-.col-l i.code,
-.col-l a i.fa-code {
+.col-l i.status,
+.col-l a i.fa-status {
 	width: 20px;
 	vertical-align: 0;
 	text-align: center
@@ -591,7 +593,7 @@ input:checked + .switchlabel.disabled:after {
 .col-l.icon {
 	padding-top: 2px;
 }
-.col-l i.fa-code {
+.col-l i.fa-status {
 	font-size: 15px;
 }
 .settings i {
@@ -737,7 +739,7 @@ input:checked + .switchlabel.disabled:after {
 		margin: 0 0 0 5px;
 		vertical-align: baseline;
 	}
-	.col-l i.fa-code {
+	.col-l i.fa-status {
 		float: none;
 		line-height: 16px;
 	}
