--- a/srv/http/assets/css/settings.css
+++ b/srv/http/assets/css/settings.css
@@ -70,6 +70,7 @@
 .fa-plus:before { content: "\f519" }
 .fa-plus-circle:before { content: "\f564" }
 .fa-plus-r:before { content: "\f581" }
+.fa-power:before { content: "\f520" }
 .fa-question-circle:before { content: "\f560" }
 .fa-reboot:before { content: "\f521" }
 .fa-redo:before { content: "\f524" }
