--- a/srv/http/assets/css/info.css
+++ b/srv/http/assets/css/info.css
@@ -81,6 +81,9 @@ hr {
 	-ms-overflow-style: none;
 	-webkit-overflow-scrolling: touch;
 }
+#infoOverlay.noscroll {
+	height: 100%;
+}
 #infoOverlay .fa {
 	vertical-align: -2px;
 }
