--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -431,7 +431,7 @@ i.map.disabled, .map.disabled i {
 	vertical-align: -3px;
 	text-align: center;
 	font-size: 22px;
-	color: var( --cw ) !important;
+	color: var( --cw );
 	text-shadow: 1px 1px 2px #000000;
 }
 .menu i.gr {
