--- a/srv/http/assets/css/main.css
+++ b/srv/http/assets/css/main.css
@@ -1824,6 +1824,7 @@ i.map.disabled, .map.disabled i {
 #button-playback {
 	position: absolute;
 	width: 40px;
+	top: 0;
 	line-height: 40px;
 	font-size: 26px;
 	text-align: center;
